[tool.poetry]
name = "goit-python11-web-module-hw9"
version = "0.1.0"
description = ""
authors = ["dzvenyslavavovk <dzvinavovk.25@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python11_web_module_hw9"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
